build/resources/test/LO-2/InvalidPrograms/test_19.lo
// Missing type on main declaration

main() {
    {
        return 0;
    }
}